--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="description" content="A melhor web store para comprar seu próximo bolo">
     <meta name="author" content="Morassutti, Patrício, Prates">
     <!-- ícone -->
-    <link rel="icon" type="image/svg+xml" href="./src/assets/icons/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/icons/logo.svg" />
     <!-- CSS -->
     <link rel="stylesheet" href="./global.css">
-    <link rel="stylesheet" href="src/styles/home.css">
+    <link rel="stylesheet" href="./styles/home.css">
     <!-- Fonte: Dancing Script -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,13 +24,13 @@
   <body>
     <header>
       <!-- logo aqui -->
-      <img class="logo" src="./src/assets/icons/logo.svg" alt="">
+      <img class="logo" src="/assets/icons/logo.svg" alt="">
       <nav>
         <!-- links do site -->
         <ul class="nav_links">
           <li><a href="./index.html" style="color:#E30B5C">Home</a></li>
-          <li><a href="./src/pages/sobre.html">Sobre</a></li>
-          <li><a href="./src/pages/dicas.html">Dicas</a></li>
+          <li><a href="./pages/sobre.html">Sobre</a></li>
+          <li><a href="./pages/dicas.html">Dicas</a></li>
           <li><a href="#to_footer">Contato</a></li>
         </ul>
       </nav>
@@ -42,13 +42,13 @@
             <h1>Esta é a <span>Caramel</span>! 🍰</h1>
             <h2>Qualidade, Criatividade, Acessibilidade</h2>
           </div>
-          <img src="./src/assets/images/HappyBunchAstronaut.png" alt="">
+          <img src="/assets/images/HappyBunchAstronaut.png" alt="">
         </div>
         <a href="#cakes">🔽</a>
       </section>
       <!-- seção dos bolos -->
       <div class="box_search">
-        <img src="./src/assets/icons/search.svg" alt="">
+        <img src="/assets/icons/search.svg" alt="">
         <input id="search" type="text">
       </div>
       <section id="cakes">
@@ -61,28 +61,28 @@
     <footer>
       <section>
         <div class="esquerda">
-          <span class="endereco"><img src="./src/assets/icons/map_pin.svg"><p><h2>End:&nbsp;</h2>Rua das Flores,123,São Paulo,SP,12345-6789</p></span>
-          <span class="horario"><img src="./src/assets/icons/clock.svg"><p><h2>Horários:&nbsp;</h2>8h30min - 17h</p></span>
-          <span class="telefone"><img src="./src/assets/icons/phone.svg"><p><h2>WhatsApp:&nbsp;</h2>(11)9999-9999</p></span>
+          <span class="endereco"><img src="/assets/icons/map_pin.svg"><p><h2>End:&nbsp;</h2>Rua das Flores,123,São Paulo,SP,12345-6789</p></span>
+          <span class="horario"><img src="/assets/icons/clock.svg"><p><h2>Horários:&nbsp;</h2>8h30min - 17h</p></span>
+          <span class="telefone"><img src="/assets/icons/phone.svg"><p><h2>WhatsApp:&nbsp;</h2>(11)9999-9999</p></span>
         </div>
         <div class="direita">
-          <span class="email"><img src="./src/assets/icons/mail.svg"><p><h2>Email:&nbsp;</h2>caramel@email.com</p></span>
-          <span class="facebook"><img src="./src/assets/icons/facebook.svg"><p><h2>Facebook:&nbsp;</h2>@caramel</p></span>
-          <span class="instagram"><img src="./src/assets/icons/instagram.svg"><p><h2>Insta:&nbsp;</h2>@caramel_bolos</p></span>
+          <span class="email"><img src="/assets/icons/mail.svg"><p><h2>Email:&nbsp;</h2>caramel@email.com</p></span>
+          <span class="facebook"><img src="/assets/icons/facebook.svg"><p><h2>Facebook:&nbsp;</h2>@caramel</p></span>
+          <span class="instagram"><img src="/assets/icons/instagram.svg"><p><h2>Insta:&nbsp;</h2>@caramel_bolos</p></span>
         </div>
       </section>
       <div id="to_footer">
         <ul>
           <li>
-            <img src="./src/assets/icons/lock.svg">
-            <a href="./src/pages/privacidade.html">Política e Privacidade do Usuário</a>
+            <img src="/assets/icons/lock.svg">
+            <a href="/pages/privacidade.html">Política e Privacidade do Usuário</a>
           </li>
         </ul>
       </div>
     </footer>
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
-    <script type="module" src="./src/utils/cakes.js"></script>
-    <script type="module" src="./src/utils/filter.js"></script>
+    <script type="module" src="/utils/cakes.js"></script>
+    <script type="module" src="/utils/filter.js"></script>
   </body>
 </html>
