4rd commit: test to deploy

--- a/public/pages/privacidade.html
+++ b/public/pages/privacidade.html
@@ -8,7 +8,7 @@
     <!-- ícone -->
     <link rel="icon" type="image/svg+xml" href="../assets/icons/logo.svg" />
     <!-- CSS -->
-    <link rel="stylesheet" href="../../global.css">
+    <!-- <link rel="stylesheet" href="../../global.css"> -->
     <link rel="stylesheet" href="../styles/privacidade.css">
     <!-- Fonte: Dancing Script -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
