--- a/public/pages/sobre.html
+++ b/public/pages/sobre.html
@@ -9,7 +9,7 @@
   <!-- ícone -->
   <link rel="icon" type="image/svg+xml" href="../assets/icons/logo.svg" />
   <!-- CSS -->
-  <link rel="stylesheet" href="../../global.css">
+  <!-- <link rel="stylesheet" href="../../global.css"> -->
   <link rel="stylesheet" href="../styles/sobre_dicas.css">
   <!-- Fonte: Dancing Script -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
